--- a/html/cervezas.html
+++ b/html/cervezas.html
@@ -45,9 +45,6 @@
                     <li class="nav-item paddingLi">
                         <a class="li-link" href="shop.html"> Tienda </a>
                     </li>
-                    <li class="nav-item paddingLi">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
-                    </li>
                     <li class="nav-item">
                         <a class="li-link" href="contacto.html"> Contacto </a>
                     </li>
@@ -61,7 +58,7 @@
         <div class="fondo-cervezas">
             <div class="tituloCentral text-center">
                 <span class="sub-titulo">Catálogo</span>
-                <h3>Cervezas</h1>
+                <h3 class="mt-3">Cervezas</h3>
             </div>
         </div>
 
@@ -249,9 +246,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="shop.html"> Tienda </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="contacto.html"> Contacto </a>
