--- a/html/contacto.html
+++ b/html/contacto.html
@@ -45,9 +45,6 @@
                     <li class="nav-item paddingLi">
                         <a class="li-link" href="shop.html"> Tienda </a>
                     </li>
-                    <li class="nav-item paddingLi">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
-                    </li>
                     <li class="nav-item">
                         <a class="li-link" href="#"> Contacto </a>
                     </li>
@@ -59,20 +56,40 @@
     <!----------------- Main ---------------------->
     <main>
 
-        <!-- Poner un Banner -->
+        <!-- FORMULARIO -->
 
-        <!-- Titulo: Nuestras Cervezas   Boton: Ver Todas -->
+        <section class="formContainer">
+            <h3 class="d-flex justify-content-center mb-4">¡Contactanos!</h3>
+            <form class="row g-3">
+                <div class="col-md-6">
+                    <input type="text" class="form-control" id="name" placeholder="Nombre y Apellido">
+                </div>
+                <div class="col-md-6">
+                  <input type="email" class="form-control" id="inputEmail4" placeholder="example@gmail.com">
+                </div>
+                <div class="col-md-6">
+                  <input type="number" class="form-control" id="telefono" placeholder="Telefono">
+                </div>
+                <div class="col-md-6">
+                  <select id="inputState" class="form-select">
+                    <option selected>Motivo</option>
+                    <option> Motivo </option>
+                    <option> Atencion al Cliente </option>
+                    <option> Reclamos </option>
+                    <option> Administracion</option>
+                    <option>Franquicias</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Mensaje"></textarea>
+                  </div>
+                <div class="col-12 d-flex justify-content-center">
+                  <button type="submit" class="btn btn-danger">Enviar</button>
+                </div>
+              </form>
+        </section>
 
-        <!-- Cartas de nuestras Cervezas -->
-
-        <!-- Nuestras Fabricas -->
-
-        <!-- Imagenes de Nuestras fabricas, con botones y titulos arriba -->
-
-        <!-- Un video de nuestras Cervezas  Boton: Reservar -->
-
-        <!-- Trabaja con Nosotros boton: Contactar -->
-
+        
     </main>
 
     <!----------------- Footer ---------------------->
@@ -110,9 +127,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="shop.html"> Tienda </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="#"> Contacto </a>
