--- a/html/locales.html
+++ b/html/locales.html
@@ -45,9 +45,6 @@
                     <li class="nav-item paddingLi">
                         <a class="li-link" href="shop.html"> Tienda </a>
                     </li>
-                    <li class="nav-item paddingLi">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
-                    </li>
                     <li class="nav-item">
                         <a class="li-link" href="contacto.html"> Contacto </a>
                     </li>
@@ -61,22 +58,123 @@
 
         <div class="fondo-locales">
             <div class="tituloCentral text-center">
-                <span class="sub-titulo">Punto de Encuentro</span>
+                <span class="sub-titulo">Puntos de Encuentro</span>
                 <h3 class="mt-3">Nuestros Locales</h3>
             </div>
         </div>
 
         <section>
             <div class="d-flex justify-content-center">
-                <div class="textFranchises">
-                    <p class="descriptionSections">
-                        "Jubilus - Brindando Momentos Inolvidables"
+                <div class="container">
+                    <p class="parrafo text-center">
+                        "Veni a disfrutar de una salida con tus amigos, familia o compañeros de trabajo, acompañado de
+                        una de las mejores cervezas Artesanales"
                     </p>
                 </div>
             </div>
         </section>
 
+        <!-- CAROUSEL -->
 
+        <section>
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner tamContenedorCarousel">
+                    <div class="carousel-item active">
+                        <div class="slide-container">
+                            <img src="../img/Locales/locales-16.jpg" class="tam-img-carousel" alt="Imagen Bar">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="slide-container">
+                            <img src="../img/Locales/locales-41.jpg" class="tam-img-carousel" alt="Imagen Bar">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="slide-container">
+                            <img src="../img/Locales/locales-29.jpg" class="tam-img-carousel" alt="Imagen Bar">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="slide-container">
+                            <img src="../img/Locales/locales-24.jpg" class="tam-img-carousel" alt="Imagen Bar">
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Locales -->
+
+        <section class="container productos-Index mt-5 mb-3">
+            <h3 class="tituloSection mt-3"> Locales más visitados </h3>
+            <div class="d-flex justify-content-end btn">
+                <button class="sub-titulo">Ver Más</button>
+            </div>
+
+            <div class="row">
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Locales/locales-4.jpg" alt="Imagen Cerveza">
+                        <h3 class="text-center"> El Botellon </h3>
+                        <p> Horarios: <span class="info-span"> 8.00 a 16.00 </span></p>
+                        <p> Horarios: <span class="info-span"> 19.00 a 1.00 </span></p>
+                        <button class="btn"> Mas Info </button>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Locales/locales-11.jpg" alt="Imagen Cerveza">
+                        <h3 class="text-center"> El Peso Argentino </h3>
+                        <p> Horarios: <span class="info-span"> 8.00 a 16.00 </span></p>
+                        <p> Horarios: <span class="info-span"> 19.00 a 1.00 </span></p>
+                        <button class="btn"> Mas Info </button>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Locales/locales-30.jpg" alt="Imagen Cerveza">
+                        <h3 class="text-center"> La Carioca </h3>
+                        <p> Horarios: <span class="info-span"> 8.00 a 16.00 </span></p>
+                        <p> Horarios: <span class="info-span"> 19.00 a 1.00 </span></p>
+                        <button class="btn"> Mas Info </button>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Locales/locales-36.jpg" alt="Imagen Cerveza">
+                        <h3 class="text-center"> La Tercera </h3>
+                        <p> Horarios: <span class="info-span"> 8.00 a 16.00 </span></p>
+                        <p> Horarios: <span class="info-span"> 19.00 a 1.00 </span></p>
+                        <button class="btn"> Mas Info </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13130.515302019532!2d-58.83779851400146!3d-34.638819019776086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1698292907467!5m2!1ses-419!2sar" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </main>
 
@@ -115,9 +213,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="shop.html"> Tienda </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="contacto.html"> Contacto </a>
