--- a/html/shop.html
+++ b/html/shop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Titulo -->
-    <title>Jubilus | Cervezas</title>
+    <title> Jubilus | Tienda </title>
 
     <!-- BS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -45,9 +45,6 @@
                     <li class="nav-item paddingLi">
                         <a class="li-link" href="#"> Tienda </a>
                     </li>
-                    <li class="nav-item paddingLi">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
-                    </li>
                     <li class="nav-item">
                         <a class="li-link" href="contacto.html"> Contacto </a>
                     </li>
@@ -59,19 +56,182 @@
     <!----------------- Main ---------------------->
     <main>
 
-        <!-- Poner un Banner -->
+        <div class="fondo-tienda">
+            <div class="tituloCentral text-center">
+                <span class="sub-titulo">Catálogo</span>
+                <h3 class="mt-3">Nuestra Tienda</h3>
+            </div>
+        </div>
 
-        <!-- Titulo: Nuestras Cervezas   Boton: Ver Todas -->
+        <section class="container">
 
-        <!-- Cartas de nuestras Cervezas -->
+            <nav class="navbar mt-5">
+                <div class="container-fluid justify-content-center">
+                    <form class="d-flex largo" role="search">
+                        <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search">
+                        <button class="btn btn-buscar" type="submit"> Buscar </button>
+                    </form>
+                </div>
+            </nav>
 
-        <!-- Nuestras Fabricas -->
+            <div class="row">
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/amber.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Amber </h3>
+                        <p> Amargor: <span class="info-span"> Medio </span></p>
+                        <p> Alcohol: <span class="info-span"> 5.7% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Bajo </span></p>
+                    <div class="carrito">
+                        <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                    </div>
+                </div>
+                </div>
 
-        <!-- Imagenes de Nuestras fabricas, con botones y titulos arriba -->
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/belgian.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Belgian </h3>
+                        <p> Amargor: <span class="info-span"> Medio Bajo </span></p>
+                        <p> Alcohol: <span class="info-span"> 6% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Un video de nuestras Cervezas  Boton: Reservar -->
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/porter.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Porter </h3>
+                        <p> Amargor: <span class="info-span"> Alto </span></p>
+                        <p> Alcohol: <span class="info-span"> 5% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Trabaja con Nosotros boton: Contactar -->
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/ipa.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> IPA </h3>
+                        <p> Amargor: <span class="info-span"> Medio </span></p>
+                        <p> Alcohol: <span class="info-span"> 7.5% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/bock.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Bock </h3>
+                        <p> Amargor: <span class="info-span"> Medio </span></p>
+                        <p> Alcohol: <span class="info-span"> 5.7% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Bajo </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/neipa.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Neipa </h3>
+                        <p> Amargor: <span class="info-span"> Medio </span></p>
+                        <p> Alcohol: <span class="info-span"> 6.6% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio Alto </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/tripel.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Tripel </h3>
+                        <p> Amargor: <span class="info-span"> Bajo </span></p>
+                        <p> Alcohol: <span class="info-span"> 7.2% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/weizenbier.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Weizenbier </h3>
+                        <p> Amargor: <span class="info-span"> Bajo </span></p>
+                        <p> Alcohol: <span class="info-span"> 7% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio Bajo </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/pilsen.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Pilsen </h3>
+                        <p> Amargor: <span class="info-span"> Medio </span></p>
+                        <p> Alcohol: <span class="info-span"> 5.3% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Bajo </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/fragaria.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Fragaria </h3>
+                        <p> Amargor: <span class="info-span"> Bajo </span></p>
+                        <p> Alcohol: <span class="info-span"> 5% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Bajo </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/cream_stout.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Cream Stout </h3>
+                        <p> Amargor: <span class="info-span"> Moderado </span></p>
+                        <p> Alcohol: <span class="info-span"> 7% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Medio Alto </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-6 col-sm-12 mb-5">
+                    <div class="tarjeta">
+                        <img src="../img/Cervezas/cuatro_tres.png" alt="Imagen Cerveza">
+                        <h3 class="text-center"> Cuatro Tres </h3>
+                        <p> Amargor: <span class="info-span"> Bajo </span></p>
+                        <p> Alcohol: <span class="info-span"> 7.7% </span></p>
+                        <p> Cuerpo: <span class="info-span"> Alto </span></p>
+                        <div class="carrito">
+                            <img src="../img/icon/shop-cart.svg" alt="Imagen Carrito">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
 
@@ -110,9 +270,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="#"> Tienda </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="li-link" href="nosotros.html"> Nosotros </a>
                     </li>
                     <li class="nav-item">
                         <a class="li-link" href="contacto.html"> Contacto </a>
